--- a/datenschutz/1.2.html
+++ b/datenschutz/1.2.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Hinweise zum Datenschutz bei crossbach.de</title>
-    <link rel="stylesheet" href="style.css" >
+    <link rel="stylesheet" href="../style.css" >
 </head>
 
 <body>
