add matrix contact

--- a/impressum/impressum.html
+++ b/impressum/impressum.html
@@ -24,7 +24,8 @@
         </p>
         <h2>Kontakt</h2>
         <p>
-            E-Mail: <a href="mailto:info@crossbach.de">info@crossbach.de</a>
+            E-Mail: <a href="mailto:info@crossbach.de">info@crossbach.de</a><br>
+            Matrix: <a href="https://matrix.to/#/@christopher:crossbach.de">@christopher:crossbach.de</a>
         </p>
     </div>
 </div>
