--- a/datenschutz/datenschutz.html
+++ b/datenschutz/datenschutz.html
@@ -20,9 +20,12 @@
 
             <h2>Wer ist für crossbach.de (und Subdomains) verantwortlich?</h2>
             <p>Christopher Roßbach<br>Kirchsteig 3<br>08626 Unterwürschnitz<br>Deutschland</p>
-            <p>E-Mail: <a href="mailto:info@crossbach.de">info@crossbach.de</a></p>
+            <p>
+                E-Mail: <a href="mailto:info@crossbach.de">info@crossbach.de</a><br>
+                Matrix: <a href="https://matrix.to/#/@christopher:crossbach.de">@christopher:crossbach.de</a>
+            </p>
             <p>Impressum: <a href="https://crossbach.de/impressum/impressum.html">https://crossbach.de/impressum/impressum.html</a></p>
-            <p>Es ist kein Datenschutzbeauftragter bestellt. Du kannst dich aber jederzeit mit Fragen und Anliegen per E-Mail an <a href="mailto:info@crossbach.de">info@crossbach.de</a> wenden.</p>
+            <p>Es ist kein Datenschutzbeauftragter bestellt. Du kannst dich aber jederzeit mit Fragen und Anliegen per E-Mail an <a href="mailto:info@crossbach.de">info@crossbach.de</a> oder per Matrix an <a href="https://matrix.to/#/@christopher:crossbach.de">@christopher:crossbach.de</a> wenden.</p>
 
             <h2>Wofür und auf welchen Rechtsgrundlagen werden Daten verarbeitet?</h2>
             <p>crossbach.de wird als sichere und dezentrale Messenger- und Chat-Lösung uneigennützig angeboten, um einzelne Personen bei der Nutzung des frei zugänglichen und etablierten Protokolls „Matrix“ zu unterstützen. Du kannst dieses Angebot annehmen, indem du</p>
