document jitsi webpage

--- a/datenschutz/datenschutz.html
+++ b/datenschutz/datenschutz.html
@@ -34,6 +34,15 @@
                 <li><a href="https://element.crossbach.de">https://element.crossbach.de</a> aufrufst oder</li>
                 <li>über andere Homeserver gemäß der Matrix-Spezifikation Kontakt zu crossbach.de(-Nutzern) aufbaust.</li>
             </ul>
+            <p>
+                Zudem wird jitsi.crossbach.de uneigennützig￼als freie Videochat-Plattform angeboten.
+                Du kannst dieses Angebot annehmen, indem du
+            </p>
+            <ul class="bullet">
+                <li><a href="https://jitsi.crossbach.de">https://jitsi.crossbach.de</a>,</li>
+                <li>jitsi.crossbach.de als Jitsi-Server in anderen Anwendungen angibst oder</li>
+                <li>einem Video-Chat auf jitsi.crossbach.de beitrittst.</li>
+            </ul>
             <p>Wenn du das Angebot annimmst entsteht ein Nutzungsverhältnis zwischen dir und uns das unter Anderem durch die Matrix-Spezifikation genauer bestimmt wird. <strong>Zur Erfüllung unserer Pflichten im Rahmen dieses
 Nutzungsverhältnisses</strong> verarbeiten wir personenbezogene Daten gemäß Art. 6 Abs. 1 Buchst. b DSGVO.</p>
             <p>Wenn du optionale Widgets und Sticker Packs in Matrix-Räume integrierst oder zustimmst, dass Widgets und Sticker, die von anderen Nutzer_innen integriert wurden, bei dir geladen werden, gelten die Bedinungen und Datenschutzrichtlinien der verwendeten Dienste.</p>
@@ -42,10 +51,17 @@ Verpflichtungen</strong> verarbeiten wir die erforderlichen personenbezogenen Da
             <p>Zur Zeit bieten wir crossbach.de für Einzelpersonen zum Ausprobieren des Matrix-Netzwerks im persönlichen Umfeld an.</p>
 
             <h2>Welche Daten werden verarbeitet?</h2>
-            <h3>Wenn du die Website <a href="https://element.crossbach.de">https://element.crossbach.de</a> aufrufst:
-            </h3>
-            <p>Daten, die von deinem Computer an unseren Webserver geschickt werden (z.B. deine IP-Adresse, Angaben zu deinem Browser, Betriebssystem und Bildschirmauflösung, Adresse der aufgerufenen Seite, Zugriffszeitpunkt, evtl. Adresse der vorher aufgerufenen Seite) werden von unserem Webserver kurzzeitig verarbeitet, soweit das erforderlich ist, um dir die aufgerufene Seite zur Verfügung zu stellen. Wir speichern diese Daten aber nicht. Die bei vielen Webservern üblichen „Logfiles“ haben wir abgeschaltet.</p>
-            <p>Wir verwenden Speichertechniken deines Browsers (Indexed DB, Local Storage und Session Storage), soweit dies technisch erforderlich ist, um dir einen Web-Client für das Matrix-Netzwerk zur Verfügung zu stellen. Daten werden damit auf deinem Computer &#x2F; Handy gespeichert, ausschließlich zum Zugriff auf crossbach.de benutzt und nicht mit Daten aus anderen Quellen verknüpft. Du kannst diese Speichertechniken in deinem Browser blockieren &#8211; dann kannst du den Web-Client von crossbach.de allerdings nicht nutzen (aber du könntest mit einem Matrix-Desktop-Client oder einer Handy-App auf dein crossbach.de-Konto zugreifen).</p>
+            <h3>Wenn du die Website <a href="https://jitsi.crossbach.de">https://jitsi.crossbach.de</a> bzw. <a href="https://element.crossbach.de">https://element.crossbach.de</a> aufrufst</h3>
+            <p>
+                Daten, die von deinem Computer an unseren Webserver geschickt werden (z.B. deine IP-Adresse, Angaben zu deinem Browser, Betriebssystem und Bildschirmauflösung, Adresse der aufgerufenen Seite, Zugriffszeitpunkt, evtl. Adresse der vorher aufgerufenen Seite) werden von unserem Webserver kurzzeitig verarbeitet, soweit das erforderlich ist, um dir die aufgerufene Seite zur Verfügung zu stellen.
+                Wir speichern diese Daten aber nicht.
+                Die bei vielen Webservern üblichen „Logfiles“ haben wir abgeschaltet.
+            </p>
+            <p>
+                Wir verwenden Speichertechniken deines Browsers (Indexed DB, Local Storage und Session Storage), soweit dies technisch erforderlich ist, um dir einen Web-Client für das Matrix-Netzwerk zur Verfügung zu stellen.
+                Daten werden damit auf deinem Computer &#x2F; Handy gespeichert, ausschließlich zum Zugriff auf jitsi.crossbach.de bzw. element.crossbach.de benutzt und nicht mit Daten aus anderen Quellen verknüpft.
+                Du kannst diese Speichertechniken in deinem Browser blockieren &#8211; dann kannst du den Web-Clients jitsi.crossbach.de bzw. element.crossbach.de allerdings nicht (oder nur begrenzt) nutzen (aber du könntest mit einem Jitsi-/Matrix-Desktop-Client oder einer Handy-App auf jitsi.crossbach.de bzw. dein crossbach.de-Konto zugreifen).
+            </p>
 
             <h3>Wenn du crossbach.de als Chatlösung nutzt:</h3>
             <p>Damit du über crossbach.de chatten kannst, ist die Bereitstellung einiger Daten erforderlich. Weitere Daten, die in der folgenden Liste als „optional“ gekennzeichnet sind, kannst du hinzufügen, aber auch weglassen. Wenn du uns die Daten, die nicht als „optional“ gekennzeichnet sind, nicht mitteilen möchtest, kannst du crossbach.de leider nicht als Chat- und Messengerlösung nutzen.</p>
